Work up content layouts

--- a/app/views/layouts/article.html.haml
+++ b/app/views/layouts/article.html.haml
@@ -1,28 +1,24 @@
 !!!
-%html{:lang => "en"}
+%html{lang: "en"}
   %head
-    %meta{:charset => "utf-8"}
-    %title
-      = @article.title
-      by Ben Schwarz
-    %link{:rel => "stylesheet", :href => "/stylesheets/application.css"}
-    
+    %meta{charset: "utf-8"}
+    %title= @article.title
+    %link{rel: "stylesheet", href: "/stylesheets/application.css"}
+    %script{src: "/javascripts/modernizr.js"}
     = csrf_meta_tag
-  %body.article{:id => params[:action]}
-    = yield
+  %body{id: "article"}
+    %article
+      %header
+        %h1= @article.title
+      .wrapper
+        %time{pubDate: true, datetime: @article.published.xmlschema}
+          Posted
+          = @article.published.strftime('%B')
+          = @article.published.strftime('%d').to_i.ordinalize 
+          = @article.published.strftime('%Y')
+        .body
+          %h2= @article.excerpt
+          = yield
     %footer
-      %small
-        ©
-        %a{:href => "/about"} Ben Schwarz
-        2009—  
-      %nav
-        %ul
-          %li
-            %a{:href => "/"} Home
-          %li
-            %a{:href => "/about", :rel => "author"} About
-          %li
-            %a{:href => "http://twitter.com/benschwarz", :rel => "external"} Twitter
-          %li
-            %a{:href => "http://github.com/benschwarz", :rel => "external"} Github
-  %script{:src => "/javascripts/modernizr.js"}
+      %small © Ben Schwarz 2009—  
+    %script{src: "/javascripts/application.js"}
