--- a/app/articles/growing-up-with-a-new-site.haml
+++ b/app/articles/growing-up-with-a-new-site.haml
@@ -1,4 +1,4 @@
--# title: Growing up with a new site
+-# title: Growing up
 -# published: 2009-07-31
 -# excerpt: Looking back, my representation on the web has always been pretty half assed.
 -# keywords: web, website, development, personal, growth, representation
