--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -4,7 +4,7 @@
 @import 'columns';
 
 $background_colour: #F6F6F6; 
-$light_green: #8EDD50;
+$light_green: #8ECC3E;
 
 @mixin flag { 
 	@include border-radius(0.25em);
