--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,5 @@
   %body{id: params[:action]}
     = yield
     %footer
-      %small © Ben Schwarz 2009—  
+      %small © <a href="/">Ben Schwarz</a> 2009—  
     %script{src: "/javascripts/application.js"}
