--- a/app/articles/getting-shit-done-with-software.haml
+++ b/app/articles/getting-shit-done-with-software.haml
@@ -1,4 +1,4 @@
--# title: Getting shit done, with software
+-# title: Getting shit done
 -# published: 2009-08-12
 -# excerpt: More features makes for better software, right?
 -# keywords: gtd, software, features, development, omnioutliner, review, outliner, omni, cultured code, things, omnifocus
