--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -40,7 +40,7 @@
   %section#external
     %h1 AB+C
     %p
-      Apart from my personal work I also operate AB+C, alongside Anthony Kolber. Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
+      Apart from my personal work I also operate <a href="http://ab-c.com.au" rel="external">AB+C</a>, alongside <a href="http://aestheticallyloyal.com" rel="external">Anthony Kolber</a>. Together we build beautiful, professional looking web applications. Got something you want to get off the ground? Talk to us.
 
 %section#events
   %header
