--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -50,7 +50,7 @@
   %section#upcoming
     %h1 Upcoming Events
     %article
-      %a{href: "#"}
+      %a{href: "http://south10.webdirections.org/"}
         %h1 HTML5 Workshop
         %p Web directions south, 2010
         %p.location Sydney, Australia
