--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,3 +20,10 @@
     %footer
       %small © <a href="/">Ben Schwarz</a> 2009—  
     %script{src: "/javascripts/application.js"}
+    %script{ :src => "http://www.google-analytics.com/urchin.js", :type => "text/javascript" }
+    %script{ :type => "text/javascript" }
+      _uacct = "UA-139707-2";
+      urchinTracker();
+    %script{:src => "/javascripts/jquery-1.4.2.min.js"}  
+    %script{:src => "/javascripts/track-external.js"}
+    
