Corrected spelling, removed blockquote

--- a/app/articles/getting-shit-done-with-software.haml
+++ b/app/articles/getting-shit-done-with-software.haml
@@ -6,13 +6,11 @@
 .column.eight
   :smartypants
     One of the many myths of GTD and todo software is that they all require feature X, Y and usually Z. Hell, throw all of them in.
-  %blockquote.column.three More features makes for better software, right?
-  :smartypants  
     Like a few people I'm sure, I've chopped and changed my todo software as I've realised something wasn't working for me. I've used both web and mac applications, it just didn't work out.
     
     More recently, I realised that I was a total tight ass when I decided I didn't want to pay $50USD for [Cultured Code's](http://culturedcode.com/) ['Things'](http://culturedcode.com/things) app. I'd nabbed a copy for my iPhone, now I need to grab a desktop client licence. Lame. 
     
-    Actually it was more that Things didn't map to my mind very well. I'd also checked [Omni's](http://www.omnigroup.com/) ['Focus'](http://www.omnigroup.com/applications/omnifocus/), but $24.00 for an iPhone app (~$80 for the desktop client) that I might only use once or twice. (Where is app trailing, apple?). 
+    Actually it was more that Things didn't map to my mind very well. I'd also checked [Omni's](http://www.omnigroup.com/) ['Focus'](http://www.omnigroup.com/applications/omnifocus/), but $24.00 for an iPhone app (~$80 for the desktop client) that I might only use once or twice. (Where is app trialing, apple?). 
     
     Anyway, the point of this article was that I realised that I once successfully used [OmniOutliner](http://www.omnigroup.com/applications/omnioutliner/), while working at an agency. Better yet, I already owned a licence.
   
