Removed dupe from opening of growing up article

--- a/app/articles/growing-up-with-a-new-site.haml
+++ b/app/articles/growing-up-with-a-new-site.haml
@@ -5,7 +5,7 @@
 
 .column.eight
   :smartypants
-    Looking back, my representation on the web has always been pretty half assed. In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my action together.
+    In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my action together.
     ## Shiny object syndrome
     That was January, here I sit the day before August staring into textmate typing the first article I've written in almost 2 years, I haven't even bothered to move those old posts. It wasn't worth it.
   
