Article cleanups with the insight of time

--- a/app/articles/growing-up-with-a-new-site.haml
+++ b/app/articles/growing-up-with-a-new-site.haml
@@ -5,11 +5,10 @@
 
 .column.eight
   :smartypants
-    In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my action together.
-    ## Shiny object syndrome
-    That was January, here I sit the day before August staring into textmate typing the first article I've written in almost 2 years, I haven't even bothered to move those old posts. It wasn't worth it.
+    In January, [Tim Lucas](http://toolmantim.com) pulled together a shiny new site and boosted his article quality dramatically. I thought "he's doing it right", I really wanted to get my site together.
+    That was January—here I sit the day before August staring into textmate typing the first article I've written in almost 2 years, I haven't even bothered to move those old posts. It wasn't worth it.
   
-    This year I've made more open source releases and contributions than ever before, I've lapped up various technologies and concepts, wrote my first DSL with ruby and felt like I was pushing through to another level, mentally anyway. 
+    During this year I've made more open source releases and contributions than ever before, I've lapped up various technologies and concepts, wrote my first DSL with ruby and felt like I was pushing through to another level, mentally anyway. 
   
     Its not hard to say that leaving my salary paying job and moving to consulting was one of the best things I've done. It felt selfish to leave the team for a reason none other than _"I needed time away"_. That was a year ago. Since then I've had more time to reflect on life and importantly, development.
   
