--- a/app/articles/rubykaigi-a-western-perspective.haml
+++ b/app/articles/rubykaigi-a-western-perspective.haml
@@ -22,23 +22,10 @@
   
     On my first night in Tokyo, while running late to dinner the manager of a small connivence store walked me from one end of a massive train station to the other, where I needed to be to catch a specific line. He also taught me how to fish, rather than just showing me where it was. I thanked him, he bowed and trundled back to his store.
 
-
     ### Where is this going anyway? 
-
 
     Not really anywhere, it was a long way home from Tokyo and I thought this post during a warm embrace with my headphones and iPhone.
 
-    ### Come to Railscamp in Melbourne this November
-
-    Theres plenty to read about past railscamps, including one in the us only this last gone week. I’m one of the organisers for railscamp 6, situated an hour out of Melbourne.
-
-    ### Some common excuses
-
-    #### My wife / girlfriend / parter / dog would never accept me leaving them for two weeks.
-
-    ![Tolerant girlfriends](http://farm4.static.flickr.com/3431/3732655300_2a60de61cb.jpg "Tolerant girlfriends")
-    I brought my girlfriend along. It seems that a couple of weeks in Tokyo is a pretty easy sell (dah)
-
     #### Rubykaigi is almost more than 60% japanese content
     ![Ruby in Japanese](http://farm4.static.flickr.com/3440/3742724460_ed3329978c.jpg "Ruby")
-    [Leonard Chin](http://twitter.com/lchin) was a superstar, he had live translations on a second monitor in all of the japanese sessions that I attended. Anyway, I skipped more than 60% of the talks at Railsconf this year (currency of talks at these big conferences is a bitch). Most times conferences are more about going to meet and hang out with other like minded people. RubyKaigi was awesome and it'll be pretty hard to not attend next year. See you there?
+    [Leonard Chin](http://twitter.com/lchin) was a superstar, he had live translations on a second monitor in all of the japanese sessions that I attended. Anyway, I skipped more than 60% of the talks at Railsconf this year (having a current technical talk at these big conferences is almost impossible). Most times conferences are more about going to meet and hang out with other like minded people. RubyKaigi was awesome and it'll be pretty hard to not attend next year. See you there?
