--- a/public/stylesheets/sass/application.scss
+++ b/public/stylesheets/sass/application.scss
@@ -6,6 +6,10 @@
 $background_colour: #F6F6F6; 
 $light_green: #8ECC3E;
 
+::selection { background: $light_green; }
+::-moz-selection { background: $light_green; }
+::-webkit-selection { background: $light_green; }
+
 @include pop-animation;
 
 @mixin flag { 
