--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -49,11 +49,15 @@
         %span Events
   %section#upcoming
     %h1 Upcoming Events
-    %article
-      %a{href: "http://south10.webdirections.org/"}
-        %h1 HTML5 Workshop
-        %p Web directions south, 2010
-        %p.location Sydney, Australia
+    %article 
+      %h1 Nothing scheduled
+      %p Speaking hiatus
+    /
+      %article
+        %a{href: "http://south10.webdirections.org/"}
+          %h1 HTML5 Workshop
+          %p Web directions south, 2010
+          %p.location Sydney, Australia
   %section#past
     %h1 Past presentations
     %section#presentations
