--- a/app/articles/taking-the-web-back.haml
+++ b/app/articles/taking-the-web-back.haml
@@ -25,8 +25,25 @@
 
     Fact is that the W3C and WHATWG working groups receive a lot of feedback after the point; Many web developers do not realise that they *must* use existing communication channels to influence the future of web technology. 
     
-    So, you…  humble reader with opinions: Get your (virtual) ass into irc, up on to the mailing lists and form professional relationships with the people who are writing the specifications and making judgement calls. Create a large and well considered feedback loop. After all, the web doesn't belong to the W3C, WHATWG, apple, google, mozilla or anyone else. It belongs to all of us.
+    So, you…  humble reader with opinions: Get your (virtual) ass into irc<sup>1, 2</sup>, up on to the mailing lists<sup>3, 4</sup> and form professional relationships with the people who are writing the specifications and making judgement calls. 
+    
+    Create a large and well considered feedback loop. After all, the web doesn't belong to the W3C, WHATWG, apple, google, mozilla or anyone else. It belongs to all of us.
 
     I personally not only want to understand my tools, but I want to shape the way that I interact with them also.
 
     Lets take back control of the web together.
+    
+    
+%nav#footnotes
+  %a{href: "irc://irc.freenode.org/whatwg"}
+    %sup 1
+    WHATWG on IRC
+  %a{href: "irc://irc.freenode.org/html5"}
+    %sup 2
+    HTML5 on IRC
+  %a{href: "http://lists.w3.org/Archives/Public/public-html/"}
+    %sup 3
+    WHATWG mailing lists
+  %a{href: "http://www.whatwg.org/mailing-list"}
+    %sup 4
+    W3C mailing lists (public-html)
