--- a/app/articles/taking-the-web-back.haml
+++ b/app/articles/taking-the-web-back.haml
@@ -16,8 +16,8 @@
     To put a few things straight;
 
     * The W3C are not a figure of authority
-    * The W3C do however attempt to act as a central hub of documentation for technical specifications that make up what we know as the web.
-    * Some of their projects can be considered experimental. 
+    * The W3C do however attempt to act as a central hub of documentation for technical specifications that make up what we know as the web
+    * Some of their projects can be considered experimental
 
     I don't think that there is anything wrong with this, rather than construct a document of fiction, I'd rather pull together a real world use case. 
     
