DFM the wordsmith

--- a/app/articles/taking-the-web-back.haml
+++ b/app/articles/taking-the-web-back.haml
@@ -5,7 +5,7 @@
 
 .column.eight
   :smartypants
-    Since the [bookmarklet](http://userscripts.org/scripts/review/76281) and [W3C restyle project](/articles/moving-towards-readable-w3c-specs) that I kicked off last year, I've been extremely fortunate—people, companies and opportunities have presented themselves to me like never before (let's call it karma, but that's just an aside) it has meant that I've had more first-hand exposure to working groups than most people.
+    Since the [bookmarklet](http://userscripts.org/scripts/review/76281) and [W3C restyle project](/articles/moving-towards-readable-w3c-specs) that I kicked off last year, I've been extremely fortunate—people, companies and opportunities have presented themselves to me like never before (let's call it karma, but that's just an aside) which has meant that I've had more first-hand exposure to working groups than most people.
      
     Most web developers seem to have strong opinions about the W3C, without anything to really back it up. 
     
