Use webchat. Thanks Divya.

--- a/app/articles/taking-the-web-back.haml
+++ b/app/articles/taking-the-web-back.haml
@@ -11,7 +11,7 @@
     
     That is, their frustration with the whole web standards movement has lead them to believe that the W3C are incompetent and act as a barrier for the web to move forward.
 
-    What I have witnessed first hand with the W3C as an organisation is that it's representatives are extremely motivated people who genuinely care about the web as a medium, they are frustrated also, not only are they tied to an organisation that as moves slowly as an academic institution or a bank, but the unrealistic expectations that the web industry have of them.
+    What I have witnessed first hand with the W3C as an organisation is that its representatives are extremely motivated people who genuinely care about the web as a medium, they are frustrated also, not only are they tied to an organisation that as moves slowly as an academic institution or a bank, but the unrealistic expectations that the web industry have of them.
 
     To put a few things straight;
 
@@ -35,10 +35,10 @@
     
     
 %nav#footnotes
-  %a{href: "irc://irc.freenode.org/whatwg"}
+  %a{href: "http://webchat.freenode.net/?channels=whatwg"}
     %sup 1
     WHATWG on IRC
-  %a{href: "irc://irc.freenode.org/html5"}
+  %a{href: "http://webchat.freenode.net/?channels=html5"}
     %sup 2
     HTML5 on IRC
   %a{href: "http://lists.w3.org/Archives/Public/public-html/"}
