Added an important point to the taking the web back article

--- a/app/articles/taking-the-web-back.haml
+++ b/app/articles/taking-the-web-back.haml
@@ -17,6 +17,7 @@
 
     * The W3C are not a figure of authority
     * The W3C do however attempt to act as a central hub of documentation for technical specifications that make up what we know as the web
+    * The W3C don't "make standards" they "create recommendations"
     * Some of their projects can be considered experimental
 
     I don't think that there is anything wrong with this, rather than construct a document of fiction, I'd rather pull together a real world use case. 
