--- a/app/views/layouts/article.html.haml
+++ b/app/views/layouts/article.html.haml
@@ -2,7 +2,9 @@
 %html{lang: "en"}
   %head
     %meta{charset: "utf-8"}
-    %title= @article.title
+    %title
+      = @article.title
+      — an article by Ben Schwarz
     %link{rel: "stylesheet", href: "/stylesheets/application.css"}
     %script{src: "/javascripts/modernizr.js"}
     %link{:rel => "openid.server", :href => "http://www.myopenid.com/server"}
@@ -26,7 +28,7 @@
           %h2= @article.excerpt
           = yield
     %footer
-      %small © Ben Schwarz 2009—  
+      %small © <a href="/">Ben Schwarz</a> 2009—  
     %script{src: "/javascripts/application.js"}
     %script{ :src => "http://www.google-analytics.com/urchin.js", :type => "text/javascript" }
     %script{ :type => "text/javascript" }
