--- a/app/articles/html5-for-web-developers.haml
+++ b/app/articles/html5-for-web-developers.haml
@@ -29,6 +29,6 @@
     ## In closing
     Last week I wrote about [participating actively in web standards](http://germanforblack.com/articles/taking-the-web-back "Taking the web back
     — an article by Ben Schwarz"). What you see above is the result of my participation with the WHATWG and W3C.
-    This ends what I'd consider the communication chapter of my involvement with the WHATWG and W3C, but I look forward to working with the amazing people who helped along the way—
+    As this project draws towards the end, I look forward to working with the amazing people who helped along the way—
 
     [Anthony Kolber](http://aestheticallyloyal.com) (the other 50% of [AB+C](http://ab-c.com.au)) [Paul Irish](http://paulirish.com/), [Ian Hickson](http://hixie.ch/), [Jonathan Neal](http://twitter.com/jon_neal), [Michael™ Smith](http://people.w3.org/mike/), [Oli Studholme](http://oli.jp/), [Bruce Lawson](http://www.brucelawson.co.uk/), [Divya Manian](http://nimbupani.com/), [Lincoln Stoll](http://lstoll.net) & [Dion Almaer](http://almaer.com/blog/), all—Thankyou.
