Link in the top

--- a/app/articles/html5-for-web-developers.haml
+++ b/app/articles/html5-for-web-developers.haml
@@ -9,7 +9,7 @@
 
 .column.eight
   :smartypants
-    Today marks a very special day — I’m proud to announce the official launch of the WHATWG HTML5 specification _for web developers_.
+    Today marks a very special day — I’m proud to announce the official launch of the [WHATWG HTML5 specification _for web developers_](http://developers.whatwg.org).
 
     It features find-as-you-type search, offline access, beautiful typography, technical references pulled inline, and alternate styles for handheld devices or low resolution displays.
 
