--- a/app/articles/stepping-into-attribute-selectors.haml
+++ b/app/articles/stepping-into-attribute-selectors.haml
@@ -9,7 +9,7 @@
 
     These tags go quite aways to replacing the commonly used IDs in our markup, although due to the nature of document hierarchy, there are commonly many headers and footers within a HTML page.
 
-    So, the practice that I've been following alongside using the newer tags is the usage of some simple ARIA roles to semantically describe my content. 
+    So, the practice that I've been following alongside using the newer tags is the usage of some simple [ARIA roles](http://www.w3.org/TR/wai-aria/roles) to semantically describe my content. 
 
     Specifically, "<a href="http://www.w3.org/TR/wai-aria/roles#banner">banner</a>" ("A region that contains mostly site-oriented content, rather than page-specific content"), "<a href="http://www.w3.org/TR/wai-aria/roles#main">main"</a> ("The main content of a document"), and finally "<a href="contentinfo">contentinfo</a>" (A large perceivable region that contains information about the parent document).
 
