Added link to attribute selectors

--- a/app/articles/stepping-into-attribute-selectors.haml
+++ b/app/articles/stepping-into-attribute-selectors.haml
@@ -19,7 +19,7 @@
 
     <script src="https://gist.github.com/1106042.js"> </script>
 
-    For those of you who aren't targeting IE6, or better yet, totally not supporting it, the good news is that IE (7+) supports attribute selectors… and, of course if you wanted to continue to support IE6, you could drop in <a href="http://selectivizr.com/">selectivizr</a> and move on with your life.
+    For those of you who aren't targeting IE6, or better yet, totally not supporting it, the good news is that IE (7+) supports [attribute selectors](http://www.w3.org/TR/css3-selectors/#attribute-selectors)… and, of course if you wanted to continue to support IE6, you could drop in <a href="http://selectivizr.com/">selectivizr</a> and move on with your life.
 %aside
   %h1 Disclaimer
   %p It appears that Jeremy Keith <a href="http://adactio.com/journal/4267/">wrote about this</a> at the start of the year, but, being that I wrote this before realising Jeremy's article existed, I'll publish it anyway. (+1 Jeremy)
